--- a/scratch.html
+++ b/scratch.html
@@ -49,8 +49,8 @@
   <!-- Images -->
   <section class="image-section">
     <h2>Some Logos I Like</h2>
-    <img src="../images/BYU_image.jpeg" alt="BYU Big 12 Logo" height="100">
-    <img src="../images/NFL_image.png" alt="NFL Logo" height="100">
+    <img src="../images/byu_image.jpeg" alt="BYU Big 12 Logo" height="100">
+    <img src="../images/nfl_image.png" alt="NFL Logo" height="100">
   </section>
 
   <!-- YouTube Video -->
